[package]
name="manual_dep"
version="0.0.1"
edition = "2021"


[dependencies]
lib_config = { path = "../lib_config" }
lib_licenses = { path = "../lib_licenses" }
lib_users = { path = "../lib_users" }

chrono = {version="0.4.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
aws-sdk-secretsmanager = "0.24.0"
aws-sdk-kms = "0.24.0"
async-trait = "0.1.63"
validator = { version = "0.16", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
structopt = "0.3.26"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]
