[package]
name="manual_dep"
version="0.0.1"
edition = "2021"


[dependencies]
lib_config = { path = "../lib_config" }
lib_licenses = { path = "../lib_licenses" }
lib_users = { path = "../lib_users" }
lib_async_ops = { path = "../lib_async_ops"}
lib_blockchain = { path = "../lib_blockchain"}
env_logger = "0.10.0"
chrono = {version="0.4.24", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
aws-sdk-secretsmanager = "0.24.0"
aws-sdk-kms = "0.24.0"
async-trait = "0.1.68"
validator = { version = "0.16", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
structopt = "0.3.26"
uuid = { version = "1.3.3", features=["v4","fast-rng","macro-diagnostics","serde"]}
url = {version="2.3.1", features=["serde"] }

[dev-dependencies]
env_logger = "0.10.0"
aws-types = "0.54.1"
spectral = "0.6.0"
#testcontainers = "0.14.0"
testcontainers = { git="https://github.com/joanmiespada/testcontainers-rs", branch="localstack2"  }
tokio = { version="1.28.1", features=["full"]}
lib_config = { path = "../lib_config" }
ethers = "1.0.2"
base64 = "0.21.1"
ethers-solc = "1.0.2"


