[package]
name="server_http"
version="0.0.1"
edition = "2021"

[[bin]]
name="server_http"
path="src/main.rs"

[dependencies]
lib_users = { path = "../lib_users" }
lib_config = { path = "../lib_config" }
lib_util_jwt = { path = "../lib_util_jwt" }

actix-web = "4.2.1"
actix-rt = "2.7.0"
aws-config = "0.53.0"
aws-sdk-dynamodb = "0.23.0"
async-trait = "0.1.61"
chrono = "0.4.23"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
log = "0.4.17"
env_logger = "0.10.0"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
dotenv = "0.15.0"
envy = "0.4.2"
jsonwebtoken = "8.2.0"
tracing-actix-web = "0.7.2"
actix-cors = "0.6.4"
futures-util = "0.3.25"
rustc-serialize = "0.3.24"
derive_more = "0.99.17"
rand = "0.8.5"
rust-argon2 = "1.0.0"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


