[package]
name="truly_cli"
version="0.0.1"
edition = "2021"


[dependencies]
lib_config = { git="https://github.com/joanmiespada/truly-shared" }
lib_async_ops = { git="https://github.com/joanmiespada/truly-shared" }
lib_licenses = { path = "../lib_licenses" }
lib_users = { path = "../lib_users" }
lib_blockchain = { path = "../lib_blockchain"}
env_logger = "0.10.0"
chrono = {version="0.4.24", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.28.0"
aws-sdk-secretsmanager = "0.28.0"
aws-sdk-kms = "0.28.0"
async-trait = "0.1.68"
validator = { version = "0.16", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
structopt = "0.3.26"
uuid = { version = "1.3.3", features=["v4","fast-rng","macro-diagnostics","serde"]}
url = {version="2.3.1", features=["serde"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
log = "0.4.19"

[target.aarch64-apple-darwin.dev-dependencies]
env_logger = "0.10.0"
aws-types = "0.55.3"
spectral = "0.6.0"
#testcontainers = "0.14.0"
testcontainers = { git="https://github.com/joanmiespada/testcontainers-rs", branch="localstack2"  }
tokio = { version="1.28.1", features=["full"]}
ethers = "2.0.4"
base64 = "0.21.2"
ethers-solc = "2.0.4"


