[package]
name="truly_cli"
version="0.0.1"
edition = "2021"


[dependencies]
lib_config = { git="https://github.com/joanmiespada/truly-shared" }
lib_async_ops = { git="https://github.com/joanmiespada/truly-shared" }
lib_licenses = { path = "../lib_licenses" }
lib_users = { path = "../lib_users" }
#lib_blockchain = { git = "https://github.com/joanmiespada/truly-blockchains"}
lib_ledger = { path = "../deprecate/lib_ledger"}
env_logger = "0.10.0"
chrono = {version="0.4.31", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
aws-config = "0.56.1"
aws-sdk-dynamodb = "0.32.0"
aws-sdk-secretsmanager = "0.32.0"
aws-sdk-kms = "0.32.0"
async-trait = "0.1.73"
validator = { version = "0.16", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
structopt = "0.3.26"
uuid = { version = "1.4.1", features=["v4","fast-rng","macro-diagnostics","serde"]}
url = {version="2.4.1", features=["serde"] }
log = "0.4.20"

[target.aarch64-apple-darwin.dev-dependencies]
env_logger = "0.10.0"
aws-types = "0.56.1"
spectral = "0.6.0"
#testcontainers = "0.14.0"
testcontainers = { git="https://github.com/joanmiespada/testcontainers-rs", branch="localstack2"  }
tokio = { version="1.32.0", features=["full"]}
#ethers = "2.0.8"
base64 = "0.21.4"
#ethers-solc = "2.0.8"


