[package]
name="lambda_mint"
version="0.0.1"
edition = "2021"


[[bin]]
name="lambda_mint"
path="src/main.rs"


[dependencies]
lib_licenses = { path = "../lib_licenses" }
lib_blockchain = { path = "../lib_blockchain"}
lib_config = { git="https://github.com/joanmiespada/truly-shared" }
lib_async_ops = { git="https://github.com/joanmiespada/truly-shared" }
tower-http = { version="0.4.1", features=["full"]  }
lambda_http = { version = "0.8", features = ["apigw_rest"]}
lambda_runtime = "0.8"
aws_lambda_events = { version = "0.10.0", features = ["apigw", "alb"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt", "env-filter"] }
tokio = { version = "1", features = ["full"] }
validator = { version = "0.16", features = ["derive"] }
aws-sdk-sqs = "0.28.0"
uuid = { version = "1.4.1", features = ["v4","fast-rng",  "macro-diagnostics",  "serde"]}
