[package]
name = "lib_ledger"
version = "0.0.1"
edition = "2021"

[lib]
name = "lib_ledger"
crate-type = ["lib"]

[[test]]
name = "integration"
path = "test/lib.rs"


[dependencies]
lib_config = { git="https://github.com/joanmiespada/truly-shared" }
lib_async_ops = { git="https://github.com/joanmiespada/truly-shared" }
log = "0.4.20"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
aws-config = "0.56.1"
aws-sdk-qldb = "0.32.0"
aws-sdk-qldbsession= "0.32.0"
async-trait = "0.1.73"
aws-sdk-dynamodb = "0.32.0"
tracing = { version = "0.1", features = ["log"] }
validator = { version = "0.16", features = ["derive"] }
http = "0.2.9"
http-serde = "1.1.3"
url = { version = "2.4.1", features = ["serde"] }
rand = "0.8.5"
base64 = "0.21.4"
uuid = { version = "1.4.1", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
qldb = "3.2.8"

[target.aarch64-apple-darwin.dev-dependencies]
#[dev-dependencies]
env_logger = "0.10.0"
aws-types = "0.56.1"
spectral = "0.6.0"
#testcontainers = "0.14.0"
testcontainers = { git = "https://github.com/joanmiespada/testcontainers-rs", branch = "dev2" }
#testcontainers = { git = "https://github.com/joanmiespada/testcontainers-rs", rev="03bbe9a7611b1607810de3cabe52ce042196b3c1" }
#testcontainers = { git = "https://github.com/joanmiespada/testcontainers-rs", branch="localstack2" }
tokio = { version = "1.32.0", features = ["full"] }
reqwest= { version = "0.11.22", features = ["json"]}
dotenv = "0.15.0"
